--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
           <!-- TEXT BASED LOGO-->
           <!--<a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Shree Balaji Agriculture Degree College</span></a>-->
           <!-- IMG BASED LOGO-->
-          <a class="navbar-brand" href="index.html"><img src="assets/img/logo.jpg" alt="logo"></a>
-        </div>
+          <a class="navbar-brand" href="index.html"><p align="left"><img src="assets/img/logo.jpg" alt="logo"></a></p>
+        <h2><b>icv polytechnic </h2></b>
+      </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
             <li class="active"><a href="index.html">Home</a></li>            
