--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h3>Welcome To Shree Balaji Agriculture Degree College</h3>
+        <h3>Welcome Iswar Chandra Vidyasagar Polytechnic</h3>
         <span></span>
         <h2>We Will Help You To Learn</h2>
         <p>Stay true to yourself, yet always be open to learn. Work hard, and never give up on your dreams, even when nobody else believes they can come true but you. No better way is there to learn to love Nature than to understand Art. I've had to learn to fight all my life - got to learn to keep smiling.</p>
@@ -172,7 +172,7 @@
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h3>Welcome To Shree Balaji Agriculture Degree College</h3>
+        <h3>Welcome to Iswar Chandra Vidyasagar Polytechnic</h3>
         <span></span>
         <!--<h2>Best Education</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
@@ -188,7 +188,7 @@
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h3>Welcome To Shree Balaji Agriculture Degree College</h3>
+        <h3>Welcome To Iswar Chandra Vidyasagar Polytechnic</h3>
         <span></span>
         <!--<h2>Education For Everyone</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
@@ -243,14 +243,14 @@
                 <div class="mu-about-us-left">
                   <!-- Start Title -->
                   <div class="mu-title">
-                    <h2>Ruchita Singh</h2>
+                    <h2>anjan</h2>
                   </div>
                   <!-- End Title -->
-                  <h4>Chairperson, Shree Balaji Educational Trust</h4>
+                  <h4>Iswar Chandra Vidyasagar Polytechnic</h4>
                   <ul>
                     <div class="mu-title-content">
                     <h4>Dear Students,</h4>
-                    <h4>Shree Balaji Agriculture Degree College is an institution of opportunities where you can shape career. Our unique personality enrichment aspects create an exciting environment for students.The college campus is well laid out with aesthetically planned building, providing environment for professionals’ studies.We have a team of well qualified faculty. Our aim is to develop sound, dedicated and disciplined professionals who will be effective and good people with high value configurations. We would like to invite aspiring candidates to be a part of Shree Balaji Agriculture Degree College.</h4>
+                    <h4>Iswar Chandra Vidyasagar PolytechnicCollege is an institution of opportunities where you can shape career. Our unique personality enrichment aspects create an exciting environment for students.The college campus is well laid out with aesthetically planned building, providing environment for professionals’ studies.We have a team of well qualified faculty. Our aim is to develop sound, dedicated and disciplined professionals who will be effective and good people with high value configurations. We would like to invite aspiring candidates to be a part of Shree Balaji Agriculture Degree College.</h4>
                     </div>
                   </ul>
                 </div>
