--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                 <div class="mu-header-top-left">
                   <div class="mu-top-email">
                     <i class="fa fa-envelope"></i>
-                    <span>info@sbadc.edu</span>
+                    <span>icv@wbscte.ac.in</span>
                   </div>
                   <div class="mu-top-phone">
                     <i class="fa fa-phone"></i>
@@ -264,10 +264,10 @@
               <div class="mu-footer-widget">
                 <h4>Contact</h4>
                 <address>
-                  <p>Address: Kukuhi,Kachhauna,Near Balamau Junction Railway Station,Hardoi,Uttar Pradesh</p>
+                  <p>Address:  Jhargram,savayatan,721514,west Bengal </p>
                   <p>Phone: +91-94528-29491</p>
-                  <p>Website: www.sbadc.org</p>
-                  <p>Email: info@sbadc.edu</p>
+                  <p>Website: icvpolytechnic.ac.inin</p>
+                  <p>Email: icv@wbscte.ac.in</p>
                 </address>
               </div>
             </div>
@@ -280,7 +280,7 @@
     <div class="mu-footer-bottom">
       <div class="container">
         <div class="mu-footer-bottom-area">
-          <p>&copy; All Right Reserved. Designed with <a>&hearts;</a> by <a href="mailto:ashraygupta6@gmail.com" >Ashray Gupta</a></p>
+          <p>&copy; All Right Reserved. by chitradip & Subhamkumer  <a>&hearts;</a> by <a href="mailto:ashraygupta6@gmail.com" >Ashray Gupta</a></p>
         </div>
       </div>
     </div>
