--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>SBADC | Home</title>
+    <title>icvp | Home</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
@@ -100,8 +100,8 @@
           <!-- TEXT BASED LOGO-->
           <!--<a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Shree Balaji Agriculture Degree College</span></a>-->
           <!-- IMG BASED LOGO-->
-          <a class="navbar-brand" href="index.html"><p align="left"><img src="assets/img/logo.jpg" alt="logo"></a></p>
-        <h2><b>icv polytechnic </h2></b>
+          <a class="navbar-brand" href="index.html"><p align="center"><img src="assets/img/logo.jpg" alt="logo"></a></p>
+        <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b>
       </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
