--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="mu-header-top-left">
                   <div class="mu-top-email">
                     <i class="fa fa-envelope"></i>
-                    <span>info@sbadc.edu</span>
+                    <span>icv@wbscte.ac.in</span>
                   </div>
                   <div class="mu-top-phone">
                     <i class="fa fa-phone"></i>
@@ -100,8 +100,15 @@
           <!-- TEXT BASED LOGO-->
           <!--<a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Shree Balaji Agriculture Degree College</span></a>-->
           <!-- IMG BASED LOGO-->
-          <a class="navbar-brand" href="index.html"><p align="center"><img src="assets/img/logo.jpg" alt="logo"></a></p>
-        <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b>
+          <a class="navbar-brand" href="index.html">
+<img src="assets/img/logo.jpg" alt="logo"class="center"></a></p>
+     <style>
+.center {
+    text-align: center;
+}
+</style>
+        
+        <p> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></p>
       </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
