--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
           <!--<a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Shree Balaji Agriculture Degree College</span></a>-->
           <!-- IMG BASED LOGO-->
           <a class="navbar-brand" href="index.html">
-<img src="assets/img/logo.jpg" alt="logo"class="center"></a></p>
+<img src="assets/img/logo.jpg" alt="logo"ing class="centerpd"></a></p>
      <style>
-.center {
+.centerpd {
     text-align: center;
 }
 </style>
         
-        <p> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></p>
+      <br>  <p> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></p></br>
       </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
