--- a/index.html
+++ b/index.html
@@ -102,13 +102,9 @@
           <!-- IMG BASED LOGO-->
           <a class="navbar-brand" href="index.html">
 <img src="assets/img/logo.jpg" alt="logo"ing class="centerpd"></a></p>
-     <style>
-.centerpd {
-    text-align: center;
-}
-</style>
+    
         
-      <br>  <p> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></p></br>
+  <caption> <p> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></p></caption>
       </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
