--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
           <!-- TEXT BASED LOGO-->
           <!--<a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Shree Balaji Agriculture Degree College</span></a>-->
           <!-- IMG BASED LOGO-->
+            <caption> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></caption>
           <a class="navbar-brand" href="index.html">
 <img src="assets/img/logo.jpg" alt="logo"img class="centerpd"></a></p>
     </div>
