--- a/index.html
+++ b/index.html
@@ -98,14 +98,13 @@
           </button>
           <!-- LOGO -->              
           <!-- TEXT BASED LOGO-->
-          <!--<a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Shree Balaji Agriculture Degree College</span></a>-->
+          <!--<a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Iswar Chandra Vidyasagar Polytechnic</span></a>-->
           <!-- IMG BASED LOGO-->
-            <caption> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></caption>
+          <nobr>  <caption> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></caption></nobr>
           <a class="navbar-brand" href="index.html">
 <img src="assets/img/logo.jpg" alt="logo"img class="centerpd"></a></p>
     </div>
-        
-  <caption> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></caption>
+   
       
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
