--- a/404.html
+++ b/404.html
@@ -99,6 +99,7 @@
           <!-- LOGO -->              
           <!-- TEXT BASED LOGO -->
           <a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Varsity</span></a>
+          <caption> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></caption>
           <!-- IMG BASED LOGO  -->
           <!-- <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="logo"></a> -->
         </div>
