--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
           <div class="mu-latest-courses-area">
             <!-- Start Title -->
             <div class="mu-title">
-              <h2>Our Teachers</h2>
+              <h2>gallary</h2>
               <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ipsa ea maxime mollitia, vitae voluptates, quod at, saepe reprehenderit totam aliquam architecto fugiat sunt animi!</p>-->
             </div>
             <!-- End Title -->
@@ -414,9 +414,9 @@
               <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="mu-latest-course-single">
                   <figure class="mu-latest-course-img">
-                    <!--<a href="#"><img src="assets/img/courses/1.jpg" alt="img"></a>-->
+                    <!--<a href="#"><img src="assets/img/gallary/1.jpg" alt="img"></a>-->
                     <figcaption class="mu-latest-course-imgcaption">
-                      <a href="#">Dr. Ram Mohan Sharma</a>
+                   
                       <!--<span><i class="fa fa-clock-o"></i>90Days</span>-->
                     </figcaption>
                   </figure>
