--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
               <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="mu-latest-course-single">
                   <figure class="mu-latest-course-img">
-                    <!--<a href="#"><img src="assets/img/gallary/1.jpg" alt="img"></a>-->
+                    <!--<a href="#"><img src="assets/img/gallery/small/2.jpg" alt="img"></a>-->
                     <figcaption class="mu-latest-course-imgcaption">
                    
                       <!--<span><i class="fa fa-clock-o"></i>90Days</span>-->
@@ -433,9 +433,9 @@
               <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="mu-latest-course-single">
                   <figure class="mu-latest-course-img">
-                    <!--<a href="#"><img src="assets/img/courses/2.jpg" alt="img"></a>-->
+                    <!--<a href="#"><img src="assets/img/gallery/small/1.jpg" alt="img"></a>-->
                     <figcaption class="mu-latest-course-imgcaption">
-                      <a href="#">Dr. Dharamdev Chauhan</a>
+                      <a href="#">
                       <!--<span><i class="fa fa-clock-o"></i>75Days</span>-->
                     </figcaption>
                   </figure>
