--- a/index.html
+++ b/index.html
@@ -668,8 +668,8 @@
                     </figcaption>
                   </figure>
                   <div class="mu-latest-course-single-content">
-                    <h4><a href="#">Ex Prof. GBPAU, Pantnagar</a></h4>
-                    <p>&#9990;+91</p>
+                    <h4><a href="#"><img src="assets/img/gallery/small/2.jpg" alt="img"></a></h4>
+                   
                     <div class="mu-latest-course-single-contbottom">
                       <!--<a class="mu-course-details" href="#">Details</a>
                       <span class="mu-course-price" href="#">$165.00</span>-->
@@ -680,9 +680,9 @@
               <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="mu-latest-course-single">
                   <figure class="mu-latest-course-img">
-                    <!--<a href="#"><img src="assets/img/courses/15.jpg" alt="img"></a>-->
+                    <!--<a href="#"><img src="assets/img/gallery/small/2.jpg" alt="img"></a>-->
                     <figcaption class="mu-latest-course-imgcaption">
-                      <a href="#">Dr. Basant Singh</a>
+                      <a href="#">
                       <!--<span><i class="fa fa-clock-o"></i>75Days</span>-->
                     </figcaption>
                   </figure>
