--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
                     </figcaption>
                   </figure>
                   <div class="mu-latest-course-single-content">
-                    <h4><a href="#">Ph.D(GPB),NDUAST Kumarganj,Faizabad,UP.</a></h4>
-                    <p>&#9990;+919452829491</p>
+                    <h4><a href="#">
+              assets/img/gallery/small/2.jpg
                     <div class="mu-latest-course-single-contbottom">
                       <!--<a class="mu-course-details" href="#">Details</a>
                       <span class="mu-course-price" href="#">$165.00</span>-->
@@ -433,15 +433,15 @@
               <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="mu-latest-course-single">
                   <figure class="mu-latest-course-img">
-                    <!--<a href="#"><img src="assets/img/gallery/small/1.jpg" alt="img"></a>-->
+                   <a href="#"><img src="assets/img/gallery/small/1.jpg" alt="img"></a>-->
                     <figcaption class="mu-latest-course-imgcaption">
                       <a href="#">
                       <!--<span><i class="fa fa-clock-o"></i>75Days</span>-->
                     </figcaption>
                   </figure>
                   <div class="mu-latest-course-single-content">
-                    <h4><a href="#">Ph.D Biology,Chemistry,CSA Kanpur</a></h4>
-                    <p>&#9990;+918299802001</p>
+                    <h4><a href="#"><img src="assets/img/gallery/small/2.jpg" alt="img"></a>
+                
                     <div class="mu-latest-course-single-contbottom">
                       <!--<a class="mu-course-details" href="#">Details</a>
                       <span class="mu-course-price" href="#">$165.00</span>-->
@@ -452,15 +452,15 @@
               <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="mu-latest-course-single">
                   <figure class="mu-latest-course-img">
-                    <!--<a href="#"><img src="assets/img/courses/3.jpg" alt="img"></a>-->
+                   <a href="#"><img src="assets/img/gallery/small/2.jpg" alt="img"></a>
                     <figcaption class="mu-latest-course-imgcaption">
-                      <a href="#">Dr. Rakesh Rajput</a>
+                      <a href="#">
                       <!--<span><i class="fa fa-clock-o"></i>45Days</span>-->
                     </figcaption>
                   </figure>
                   <div class="mu-latest-course-single-content">
-                    <h4><a href="#">Ph.D(Entomology),NDUAST Kumarganj,Faizabad,UP.</a></h4>
-                    <p>&#9990;+91</p>
+                    <h4><a href="#"></a></h4>
+                    
                     <div class="mu-latest-course-single-contbottom">
                       <!--<a class="mu-course-details" href="#">Details</a>
                       <span class="mu-course-price" href="#">$165.00</span>-->
@@ -471,7 +471,7 @@
               <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="mu-latest-course-single">
                   <figure class="mu-latest-course-img">
-                    <!--<a href="#"><img src="assets/img/courses/4.jpg" alt="img"></a>-->
+                    <!--<a href="#"><img src="assets/img/gallery/small/2.jpg" alt="img"></a>
                     <figcaption class="mu-latest-course-imgcaption">
                       <a href="#">Shiv Narayan Rathur</a>
                       <!--<span><i class="fa fa-clock-o"></i>90Days</span>-->
