--- a/index.html
+++ b/index.html
@@ -410,8 +410,9 @@
               <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ipsa ea maxime mollitia, vitae voluptates, quod at, saepe reprehenderit totam aliquam architecto fugiat sunt animi!</p>-->
             </div>
             <!-- End Title -->
-            <!-- Start latest course content -->
-                   <!-- Start Slider -->
+            <!-- Start latest course content --
+
+  <!-- Start Slider -->
   <section id="mu-slider">
     <!-- Start single slider item -->
     <div class="mu-slider-single">
@@ -421,7 +422,7 @@
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h3>Welcome Iswar Chandra Vidyasagar Polytechnic</h3>
+        <h3>Welcome To Shree Balaji Agriculture Degree College</h3>
         <span></span>
         <h2>We Will Help You To Learn</h2>
         <p>Stay true to yourself, yet always be open to learn. Work hard, and never give up on your dreams, even when nobody else believes they can come true but you. No better way is there to learn to love Nature than to understand Art. I've had to learn to fight all my life - got to learn to keep smiling.</p>
@@ -437,49 +438,7 @@
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h3>Welcome to Iswar Chandra Vidyasagar Polytechnic</h3>
-        <span></span>
-        <!--<h2>Best Education</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
-        <a href="#" class="mu-read-more-btn">Read More</a>-->
-      </div> <!-- Start Slider -->
-  <section id="mu-slider">
-    <!-- Start single slider item -->
-    <div class="mu-slider-single">
-      <div class="mu-slider-img">
-        <figure>
-          <img src="assets/img/slider/1.jpg" alt="img">
-        </figure>
-      </div>
-      <div class="mu-slider-content">
-        <h3>Welcome Iswar Chandra Vidyasagar Polytechnic</h3>
-        <span></span>
-        <h2>We Will Help You To Learn</h2>
-        <p>Stay true to yourself, yet always be open to learn. Work hard, and never give up on your dreams, even when nobody else believes they can come true but you. No better way is there to learn to love Nature than to understand Art. I've had to learn to fight all my life - got to learn to keep smiling.</p>
-        <!--<a href="#" class="mu-read-more-btn">Read More</a>-->
-      </div>
-    </div>
-    <!-- Start single slider item -->
-    cfigure>
-      </div>
-      <div class="mu-slider-content">
-        <h3>Welcome Iswar Chandra Vidyasagar Polytechnic</h3>
-        <span></span>
-        <h2>We Will Help You To Learn</h2>
-        <p>Stay true to yourself, yet always be open to learn. Work hard, and never give up on your dreams, even when nobody else believes they can come true but you. No better way is there to learn to love Nature than to understand Art. I've had to learn to fight all my life - got to learn to keep smiling.</p>
-        <!--<a href="#" class="mu-read-more-btn">Read More</a>-->
-      </div>
-    </div>
-    <!-- Start single slider item -->
-    <!-- Start single slider item -->
-    <div class="mu-slider-single">
-      <div class="mu-slider-img">
-        <figure>
-          <img src="assets/img/slider/2.jpg" alt="img">
-        </figure>
-      </div>
-      <div class="mu-slider-content">
-        <h3>Welcome to Iswar Chandra Vidyasagar Polytechnic</h3>
+        <h3>Welcome To Shree Balaji Agriculture Degree College</h3>
         <span></span>
         <!--<h2>Best Education</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
@@ -495,57 +454,7 @@
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h3>Welcome 
-        <figure>
-          <img src="assets/img/slider/2.jpg" alt="img">
-        </figure>
-      </div>
-      <div class="mu-slider-content">
-        <h3>Welcome to Iswar Chandra Vidyasagar Polytechnic</h3>
-        <span></span>
-        <!--<h2>Best Education</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
-        <a href="#" class="mu-read-more-btn">Read More</a>-->
-      </div>
-    </div>
-    <!-- Start single slider item -->
-    <!-- Start single slider item -->
-    <div class="mu-slider-single">
-      <div class="mu-slider-img">
-        <figure>
-          <img src="assets/img/slider/3.jpg" alt="img">
-        </figure>
-      </div>
-      <div class="mu-slider-content">
-        <h3>Welcome 
-        <h3>Welcome to Iswar Chandra Vidyasagar Polytechnic</h3>
-        <span></span>
-        <!--<h2>Best Education</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
-        <a href="#" class="mu-read-more-btn">Read More</a>-->
-      </div>
-    </div>
-    <!-- Start single slider item -->
-    <!-- Start single slider item -->
-    <div class="mu-slider-single">
-      <div class="mu-slider-img">
-        <figure>
-          <img src="assets/img/slider/3.jpg" alt="img">
-        </figure>
-      </div>
-      <div class="mu-slider-content">
-        <h3>Welcome 
-    </div>
-    <!-- Start single slider item -->
-    <!-- Start single slider item -->
-    <div class="mu-slider-single">
-      <div class="mu-slider-img">
-        <figure>
-          <img src="assets/img/slider/3.jpg" alt="img">
-        </figure>
-      </div>
-      <div class="mu-slider-content">
-        <h3>Welcome To Iswar Chandra Vidyasagar Polytechnic</h3>
+        <h3>Welcome To Shree Balaji Agriculture Degree College</h3>
         <span></span>
         <!--<h2>Education For Everyone</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
@@ -554,10 +463,8 @@
     </div>
     <!-- Start single slider item -->    
   </section>
-  <!-- End Slider --> 
-    
-     
-  
+  <!-- End Slider -->
+
               <h2>Courses</h2>
               <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, repudiandae, suscipit repellat minus molestiae ea.</p>-->
             </div>
