--- a/gallery.html
+++ b/gallery.html
@@ -181,9 +181,9 @@
               <ul>
                 <li class="filter active" data-filter="all">All</li>
                 <li class="filter" data-filter=".lab">Lab</li>
-                <li class="filter" data-filter=".classroom">Class Room</li>
+                <li class="filter" data-filter=".classroom">infrastructure</li>
                 <li class="filter" data-filter=".library">Library</li>
-                <li class="filter" data-filter=".cafe">Infrastructure</li>
+                <li class="filter" data-filter=".cafe">success</li>
                 <li class="filter" data-filter=".others">Others</li>
               </ul>
             </div>
