--- a/gallery.html
+++ b/gallery.html
@@ -55,7 +55,7 @@
                 <div class="mu-header-top-left">
                   <div class="mu-top-email">
                     <i class="fa fa-envelope"></i>
-                    <span>info@sbadc.edu</span>
+                    <span>icv@wbscte.ac.in</span>
                   </div>
                   <div class="mu-top-phone">
                     <i class="fa fa-phone"></i>
@@ -343,7 +343,7 @@
                       </div>
                       <div class="mu-single-gallery-info">
                         <div class="mu-single-gallery-info-inner">
-                          <h4>Lab</h4>
+                          <h4>other</h4>
                           <!--<p>Sports</p>
                           <a href="assets/img/gallery/big/9.jpg" data-fancybox-group="gallery" class="fancybox"><span class="fa fa-eye"></span></a>
                           <a href="#" class="aa-link"><span class="fa fa-link"></span></a>-->
