--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h3>Welcome To Shree Balaji Agriculture Degree College</h3>
+        <h3>icv polytechnic college </h3>
         <span></span>
         <h2>We Will Help You To Learn</h2>
         <p>Stay true to yourself, yet always be open to learn. Work hard, and never give up on your dreams, even when nobody else believes they can come true but you. No better way is there to learn to love Nature than to understand Art. I've had to learn to fight all my life - got to learn to keep smiling.</p>
@@ -175,7 +175,7 @@
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h3>Welcome To Shree Balaji Agriculture Degree College</h3>
+        <h3>Welcome To icv polytechnic collage </h3>
         <span></span>
         <!--<h2>Best Education</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
@@ -191,7 +191,7 @@
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h3>Welcome To Shree Balaji Agriculture Degree College</h3>
+        <h3>icv polytechnic college </h3>
         <span></span>
         <!--<h2>Education For Everyone</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
@@ -254,7 +254,7 @@
                   <ul>
                     <div class="mu-title-content">
                     <h4>Dear Students,</h4>
-                    <h4>Iswar Chandra Vidyasagar PolytechnicCollege is an institution of opportunities where you can shape career. Our unique personality enrichment aspects create an exciting environment for students.The college campus is well laid out with aesthetically planned building, providing environment for professionals’ studies.We have a team of well qualified faculty. Our aim is to develop sound, dedicated and disciplined professionals who will be effective and good people with high value configurations. We would like to invite aspiring candidates to be a part of Shree Balaji Agriculture Degree College.</h4>
+                    <h4>Iswar Chandra Vidyasagar PolytechnicCollege is an institution of opportunities where you can shape career. Our unique personality enrichment aspects create an exciting environment for students.The college campus is well laid out with aesthetically planned building, providing environment for professionals’ studies.We have a team of well qualified faculty. Our aim is to develop sound, dedicated and disciplined professionals who will be effective and good people with high value configurations. We would like to invite aspiring candidates to be a part of Shree icv polytechnic college.</h4>
                     </div>
                   </ul>
                 </div>
@@ -418,15 +418,13 @@
     <div class="mu-slider-single">
       <div class="mu-slider-img">
         <figure>
-          <img src="assets/img/slider/1.jpg" alt="img">
+          <img src="assets/img/gallery/small/9.jpg" alt="img">
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h3>Welcome To Shree Balaji Agriculture Degree College</h3>
+        <h3></h3>
         <span></span>
-        <h2>We Will Help You To Learn</h2>
-        <p>Stay true to yourself, yet always be open to learn. Work hard, and never give up on your dreams, even when nobody else believes they can come true but you. No better way is there to learn to love Nature than to understand Art. I've had to learn to fight all my life - got to learn to keep smiling.</p>
-        <!--<a href="#" class="mu-read-more-btn">Read More</a>-->
+         <!--<a href="#" class="mu-read-more-btn">Read More</a>-->
       </div>
     </div>
     <!-- Start single slider item -->
@@ -434,11 +432,11 @@
     <div class="mu-slider-single">
       <div class="mu-slider-img">
         <figure>
-          <img src="assets/img/slider/2.jpg" alt="img">
+          <img src="assets/img/gallery/small/7.jpg" alt="img">
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h3>Welcome To Shree Balaji Agriculture Degree College</h3>
+        <h3></h3>
         <span></span>
         <!--<h2>Best Education</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
@@ -450,11 +448,11 @@
     <div class="mu-slider-single">
       <div class="mu-slider-img">
         <figure>
-          <img src="assets/img/slider/3.jpg" alt="img">
+          <img src="assets/img/gallery/small/6.jpg" alt="img">
         </figure>
       </div>
       <div class="mu-slider-content">
-        <h3>Welcome To Shree Balaji Agriculture Degree College</h3>
+        <h3></h3>
         <span></span>
         <!--<h2>Education For Everyone</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor amet error eius reiciendis eum sint unde eveniet deserunt est debitis corporis temporibus recusandae accusamus.</p>
@@ -744,10 +742,10 @@
               <div class="mu-footer-widget">
                 <h4>Contact</h4>
                 <address>
-                  <p>Address: Kukuhi,Kachhauna,Near Balamau Junction Railway Station,Hardoi,Uttar Pradesh</p>
+                  <p>Address: Jhargram,savayatan,721514</p>
                   <p>Phone: +91-94528-29491</p>
-                  <p>Website: www.sbadc.org</p>
-                  <p>Email: info@sbadc.edu</p>
+                  <p>Website: www.icvpolytechnic.ac.in</p>
+                  <p>Email: icv@wbscte.ac.in</p>
                 </address>
               </div>
             </div>
