--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-6">
                   <div class="mu-our-teacher-single">
                     <figure class="mu-our-teacher-img">
-                      <img src="assets/img/teachers/teacher-03.jpg" alt="teacher img">
+                      <img src="assets/img/gallery/small/3.jpg" alt="img">
                       <div class="mu-our-teacher-social">
                         <span>Agriculture has been at the center of human civilization since, well, since civilization began – and it remains at the heart of many of the most pressing issues for modern societies.</span>
                         <!--<a href="#"><span class="fa fa-facebook"></span></a>
