--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
     <div class="mu-slider-single">
       <div class="mu-slider-img">
         <figure>
-          <img src="assets/img/gallery/small/7.jpg" alt="img">
+          <img src="assets/img/gallery/small/4.jpg" alt="img">
         </figure>
       </div>
      
@@ -506,12 +506,12 @@
                     </div>
                   </div>
                 </div>-->
-                <div class="col-lg-3 col-md-3 col-sm-6">
+            <!--    <div class="col-lg-3 col-md-3 col-sm-6">
                   <div class="mu-our-teacher-single">
                     <figure class="mu-our-teacher-img">
                       <img src="assets/img/gallery/small/3.jpg" alt="img">
                       <div class="mu-our-teacher-social">
-                        <span>Agriculture has been at the center of human civilization since, well, since civilization began – and it remains at the heart of many of the most pressing issues for modern societies.</span>
+                      
                         <!--<a href="#"><span class="fa fa-facebook"></span></a>
                         <a href="#"><span class="fa fa-twitter"></span></a>
                         <a href="#"><span class="fa fa-linkedin"></span></a>
@@ -743,7 +743,7 @@
                 <h4>Contact</h4>
                 <address>
                   <p>Address: Jhargram,savayatan,721514</p>
-                  <p>Phone: +91-94528-29491</p>
+                  <p>Phone: 03221-201136</p>
                   <p>Website: www.icvpolytechnic.ac.in</p>
                   <p>Email: icv@wbscte.ac.in</p>
                 </address>
@@ -758,7 +758,7 @@
     <div class="mu-footer-bottom">
       <div class="container">
         <div class="mu-footer-bottom-area">
-          <p>&copy; All Right Reserved. Designed with <a>&hearts;</a> by <a href="mailto:ashraygupta6@gmail.com" >Ashray Gupta</a></p>
+          <p>&copy; All Right Reserved. Designed with;</a> by chitradip giri  <a href="mailto:chitradipgiri6@gmail.com" ></a></p>
         </div>
       </div>
     </div>
