--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <div class="mu-about-us-left">
                   <!-- Start Title -->
                   <div class="mu-title">
-                    <h2>anjan</h2>
+                    <h2>principal desk</h2>
                   </div>
                   <!-- End Title -->
                   <h4>Iswar Chandra Vidyasagar Polytechnic</h4>
@@ -445,7 +445,7 @@
     <div class="mu-slider-single">
       <div class="mu-slider-img">
         <figure>
-          <img src="assets/img/gallery/small/6.jpg" alt="img">
+          <img src="assets/img/gallery/small/8.jpg" alt="img">
         </figure>
       </div>
       
