--- a/gallery.html
+++ b/gallery.html
@@ -102,6 +102,7 @@
           <!-- IMG BASED LOGO  -->
           <a class="navbar-brand" href="index.html"><img src="assets/img/logo.jpg" alt="logo"></a>
         </div>
+         <nobr>  <caption> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></caption></nobr>
         <div id="navbar" class="navbar-collapse collapse">
          <ul id="top-menu" class="nav navbar-nav navbar-right main-nav">
             <li><a href="index.html">Home</a></li>            
