--- a/course.html
+++ b/course.html
@@ -99,6 +99,7 @@
           <!-- TEXT BASED LOGO -->
           <!--<a class="navbar-brand" href="index.html"><i class="fa fa-university"></i><span>Shree Balaji Agriculture Degree College</span></a>-->
           <!-- IMG BASED LOGO  -->
+         <nobr>  <caption> <h2><b>ISWAR CHANDRA VIDYASAGAR (ICV) POLYTECHNIC</h2></b></caption></nobr>
           <a class="navbar-brand" href="index.html"><img src="assets/img/logo.jpg" alt="logo"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
