--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   </div>
                   <div class="mu-top-phone">
                     <i class="fa fa-phone"></i>
-                    <span>+91-94528-29491</span>
+                    <span>03221-2011361</span>
                   </div>
                 </div>
               </div>
